# athenai_competition

./: .gitignore  CLAUDE.md  README.md  presentation_end_to_end_phases_1_6.ipynb  pyproject.toml  requirements-gpu.txt  requirements-local-gpu.txt  requirements.txt
configs/: benchmark_constraints.yaml  default.yaml  ppo.yaml  regime_cluster_config.yaml  sac.yaml  td3.yaml
notebooks/: 01_data_exploration.ipynb  02_benchmark_reverse_eng.ipynb  03_algos_analysis.ipynb  04_baselines_mpt.ipynb  04_regime_analysis.ipynb  05_asset_regime_analysis.ipynb  06_latent_regime_inference.ipynb  07_eda_summary.ipynb  08_temporal_analysis.ipynb  09_cluster_analysis.ipynb  10_rl_training.ipynb  RL_Meta_Allocator_Presentation.pptx  algo_clusters.py  algo_pipeline.py  algo_relationships.py  benchmark_asset_regime.py  benchmark_cashflows.py  benchmark_comparison.py  benchmark_comparison_dietz.py  benchmark_composition.py  benchmark_reconstruction.py  benchmark_reconstruction_dietz.py  create_presentation.py  dashboard_app.py  notebook_paths.py  phase1_data_exploration.ipynb  phase2_analysis.ipynb  phase2_investment_clock.ipynb
production/: .gitignore  README.md  __init__.py  requirements.txt
production/config/: api_keys.yaml  api_keys.yaml.template  production.yaml  universe.py
production/models/: latest_run.txt
production/outputs/: trades_2026-03-31.csv
production/scripts/: extract_trades.py  prepare_data.py  recommend.py  run_weekly.bat  (+4 more)
scripts/: README.md  base_runner.py  benchmark_optimizations.py  build_temporal_cluster_dataset.py  migrate_data.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py  run_phase7.py  run_phase7_aco.py  run_phase7_aco_walk_forward.py  run_phase7_walk_forward.py  run_temporal_clustering.py  summarize_phase6_runs.py  sweep_phase5_cluster_topk.py  tune_phase7.py  tune_phase7_aco.py
src/: __init__.py
tests/: __init__.py
(+98 files in other folders)
